[package]
name = "syfala_network"
version = "0.1.0"
edition = "2024"

[dependencies]

syfala_proto = { path = "../syfala_proto" }
postcard = { version = "1", features = ["use-std"] }
rustc-hash = { version = "2", optional = true }
priority-queue = { version = "2", optional = true }

# We need to use this crate to able to replace an object from a mutable reference
# with a function that is supposed to consume it.
replace_with = { version = "0.1.6", optional = true }

[features]

default = ["generic"]
generic = ["dep:priority-queue", "dep:rustc-hash", "dep:replace_with"]